2011-01-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #11674: Selection of row deletes checkbox selection
	* Fixed bug #11647: Switching workspace doesn't refresh new pagetree

2011-01-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #3358: make sure only "element" versioning type is supported / used - added status report for Reports module

2010-12-30  Susanne Moog <typo3@susanne-moog.de>

	* Fixed bug #11789: fluid viewhelper renderFlashMessages is deprecated

2010-12-28  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #11635: Removed remaining event listener

2010-12-26  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed issue #11722: TempFlashMessageQueueViewHelper is not required anymore
	* Fixed bug #11718: ExtJS confirmation window contents might be "cached"

2010-12-25  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #11473: Send to stage window may be too large
	* Fixed bug #11608: Missing space in Mass Release Confirmation
	* Fixed bug #11635: Remove "Preview of workspace ..." box when in workspace preview module
	* Fixed bug #11657: singleView should not have depth and mass-action combos
	* Fixed bug #11600: [All] tab in ws-module should not have action-buttons

2010-12-22  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #11568: Remove "Enable comparison view" switch
	* Fixed bug #11479: Label of publish action is confusing

2010-12-22  Steffen Gebert <steffen@steffen-gebert.de>

	* Added feature #10642: Design of workspace preview/comparison view (Thanks to Lars Zimmermann)

2010-12-21  Sonja Scholz <ss@cabag.ch>

	* Fixed bug #11480: Add warning when choosing mass actions

2010-12-21  Tolleiv Nietsch <typo3@tolleiv.de>

	* Followup-to #9819: Workspace preview window - browser compatibility fixed

2010-12-20  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #10693: Save and view command previews wrong page record
	* Fixed bug #11532: Generate Workspace Preview Link not working