@@ -1,3 +1,7 @@
+2011-01-06  Tolleiv Nietsch <typo3@tolleiv.de>
+
+	* Fixed bug #11029: Workspaces module: Row detail view (Thanks to Lars Zimmermann and Berit Jensen)
+
 2011-01-06  Steffen Kamper  <steffen@typo3.org>
 
 	* Fixed bug #11674: Selection of row deletes checkbox selection
